--- a/views/2/page2.html
+++ b/views/2/page2.html
@@ -95,41 +95,41 @@
 
 
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192K1M0.jpg"></a><span><a
-                href="http://localhost/2/3/2017/0830/196.html">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U314456.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192G55X.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U2533F.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192649E7.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U22U36.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192620647.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U20K06.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192555509.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U14D15.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192532V3.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U12BL.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS019250b13.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U104539.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192440D6.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U0432E.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192414C2.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01U01E08.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS019234M48.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01T953547.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192305514.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01T922162.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0192020J5.jpg"></a><span><a
-                href="javascript:void(0)">景观设施膜结构</a></span></li>
+                src="/public/imgs/upload/cpzs/page2/1-1FS01TZ0555.jpg"></a><span><a
+                href="javascript:void(0)">体育设施膜结构</a></span></li>
 
 
         <div class="clear"></div>
@@ -140,11 +140,12 @@
         <div class="pagination">
             <ul>
                 <li>首页</li>
-                <li class="thisclass">1</li>
-                <li><a href="http://localhost/2/page2">2</a></li>
+
+                <li><a href="http://localhost/2/">1</a></li>
+                <li class="thisclass">2</li>
                 <li><a href="http://localhost/2/page3">3</a></li>
                 <li><a href="http://localhost/2/page4">4</a></li>
-                <li><a href="http://localhost/2/page2">下一页</a></li>
+                <li><a href="http://localhost/2/page3">下一页</a></li>
                 <li><a href="http://localhost/2/page4">末页</a></li>
                 <li><span class="pageinfo">共 <strong>4</strong>页<strong>48</strong>条</span></li>
             </ul>
@@ -155,8 +156,7 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1
-    </div>
+    <div class="foot_main">Copyright@2006-2017 北京娜美瑞膜结构技术有限公司 rights reserved 版权所有</div>
 </div>
 <script>
     var _hmt = _hmt || [];
