--- a/views/3/page4.html
+++ b/views/3/page4.html
@@ -94,39 +94,21 @@
     <div class="n_right">
 
 
-        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS0115910407.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115TT47.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+                src="/public/imgs/upload/gcal/page4/1-1FS0113USE.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115R2551.gif"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+                src="/public/imgs/upload/gcal/page4/1-1FS0113RU19.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/gcal/page4/1-1FS0113P1133.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115P1944.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115I4339.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS0115FK17.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/1-1FS011563HQ.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115611b3.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS011554I59.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115522c9.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115504606.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img
-                src="/public/imgs/upload/1-1FS0115445947.jpg"></a><span><a
-                href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+                src="/public/imgs/upload/gcal/page4/1-1FS0113556300.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/gcal/page4/1-1FS01135354H.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/upload/gcal/page4/1-1FS011320V05.jpg"></a><span><a
+                href="javascript:void(0)">充电桩工程案例</a></span></li>
 
 
         <div class="clear"></div>
@@ -137,11 +119,11 @@
         <div class="pagination">
             <ul>
                 <li><a href="http://localhost/3/">首页</a></li>
-                <li class="thisclass">1</li>
+                <li><a href="http://localhost/3/">1</a></li>
                 <li><a href="http://localhost/3/page2">2</a></li>
                 <li><a href="http://localhost/3/page3">3</a></li>
-                <li><a href="http://localhost/3/page4">4</a></li>
-                <li><a href="http://localhost/3/page2">下一页</a></li>
+                <li class="thisclass">4</li>
+                <li><a href="http://localhost/3/page4">下一页</a></li>
                 <li><a href="http://localhost/3/page4">末页</a></li>
                 <li><span class="pageinfo">共 <strong>4</strong>页<strong>42</strong>条</span></li>
             </ul>
@@ -152,7 +134,8 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
+    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1
+    </div>
 </div>
 <script>
     var _hmt = _hmt || [];
