--- a/views/4.html
+++ b/views/4.html
@@ -93,24 +93,24 @@
 
     <div class="n_news">
 
-        <li><p><a href="http://localhost/4/20170411/25.html" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
+        <li><p><a href="http://localhost/4/1" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/24.html" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
+        <li><p><a href="http://localhost/4/2" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/23.html" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/3" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/20170411/22.html" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/4" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/20170411/21.html" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
+        <li><p><a href="http://localhost/4/5" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/20.html" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/19.html" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
+        <li><p><a href="http://localhost/4/6" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
+        <li><p><a href="http://localhost/4/7" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/18.html" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
+        <li><p><a href="http://localhost/4/8" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/20170411/17.html" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
+        <li><p><a href="http://localhost/4/9" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/20170411/16.html" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
+        <li><p><a href="http://localhost/4/10" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
             <span>2017-04-11</span></li>
 
 
