--- a/views/3.html
+++ b/views/3.html
@@ -23,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://localhost/">网站首页</a></li>
+            <li><a href="http://jbmjg.net/">网站首页</a></li>
 
-            <li><a href="http://localhost/1/">公司简介</a></li>
+            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
 
-            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://localhost/3/">工程案例</a></li>
+            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
 
-            <li><a href="http://localhost/4/">新闻资讯</a></li>
+            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
 
-            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
+            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://localhost/6/">联系我们</a></li>
+            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -49,41 +49,41 @@
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://localhost/#">1</a></li>
+            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://jbmjg.net/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://jbmjg.net/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
@@ -136,13 +136,13 @@
     <div class="pagination-wrapper">
         <div class="pagination">
             <ul>
-                <li><a href="http://localhost/3/">首页</a></li>
+                <li><a href="http://jbmjg.net/3/">首页</a></li>
                 <li class="thisclass">1</li>
-                <li><a href="http://localhost/3/page2">2</a></li>
-                <li><a href="http://localhost/3/page3">3</a></li>
-                <li><a href="http://localhost/3/page4">4</a></li>
-                <li><a href="http://localhost/3/page2">下一页</a></li>
-                <li><a href="http://localhost/3/page4">末页</a></li>
+                <li><a href="http://jbmjg.net/3/page2">2</a></li>
+                <li><a href="http://jbmjg.net/3/page3">3</a></li>
+                <li><a href="http://jbmjg.net/3/page4">4</a></li>
+                <li><a href="http://jbmjg.net/3/page2">下一页</a></li>
+                <li><a href="http://jbmjg.net/3/page4">末页</a></li>
                 <li><span class="pageinfo">共 <strong>4</strong>页<strong>42</strong>条</span></li>
             </ul>
         </div>
