--- a/views/error.html
+++ b/views/error.html
@@ -16,7 +16,7 @@
 </div>
 <script>
     function back2Home(){
-        window.location.href = 'http://localhost/'
+        window.location.href = 'http://jbmjg.net/'
     }
 </script>
 </body>
