--- a/views/4.html
+++ b/views/4.html
@@ -23,19 +23,19 @@
 <div class="nav">
     <div class="nav_main bold f14">
         <ul>
-            <li><a href="http://localhost/">网站首页</a></li>
+            <li><a href="http://jbmjg.net/">网站首页</a></li>
 
-            <li><a href="http://localhost/1/">公司简介</a></li>
+            <li><a href="http://jbmjg.net/1/">公司简介</a></li>
 
-            <li><a href="http://localhost/2/" rel="dropmenu2">产品展示</a></li>
+            <li><a href="http://jbmjg.net/2/" rel="dropmenu2">产品展示</a></li>
 
-            <li><a href="http://localhost/3/">工程案例</a></li>
+            <li><a href="http://jbmjg.net/3/">工程案例</a></li>
 
-            <li><a href="http://localhost/4/">新闻资讯</a></li>
+            <li><a href="http://jbmjg.net/4/">新闻资讯</a></li>
 
-            <li><a href="http://localhost/a5/">膜结构介绍</a></li>
+            <li><a href="http://jbmjg.net/a5/">膜结构介绍</a></li>
 
-            <li><a href="http://localhost/6/">联系我们</a></li>
+            <li><a href="http://jbmjg.net/6/">联系我们</a></li>
 
         </ul>
     </div>
@@ -49,41 +49,41 @@
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
-            <li class="current"><a href="http://localhost/#">1</a></li>
+            <li class="current"><a href="http://jbmjg.net/#">1</a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://localhost/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
 </div>
 
 <div class="n_main">
     <div class="n_left">
-        <div class="nlef_tit"><a href="http://localhost/2/">产品展示</a></div>
+        <div class="nlef_tit"><a href="http://jbmjg.net/2/">产品展示</a></div>
         <div class="nlef_main">
             <ul>
                 <ul>
 
-                    <li><span><a href="http://localhost/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/1/" rel="dropmenu10">体育设施膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/2/">自行车/汽车车棚膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/2/">自行车/汽车车棚膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/3/">景观设施膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/3/">景观设施膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/4/">充气膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/4/">充气膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/5/">PTFE/ETFE膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/5/">PTFE/ETFE膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/6/">沼气/污水膜结构</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/6/">沼气/污水膜结构</a></span></li>
 
-                    <li><span><a href="http://localhost/2/7/">学校看台</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/7/">学校看台</a></span></li>
 
-                    <li><span><a href="http://localhost/2/8/">充电桩</a></span></li>
+                    <li><span><a href="http://jbmjg.net/2/8/">充电桩</a></span></li>
 
                 </ul>
             </ul>
         </div>
-        <div class="nlef_tit"><a href="http://localhost/6/">联系我们</a></div>
+        <div class="nlef_tit"><a href="http://jbmjg.net/6/">联系我们</a></div>
         <div class="nlef_main1"><strong>淄博景博膜结构工程有限公司</strong> <br>
             电话：13869351802<br>
             地址：山东省淄博市沂源县城鲁山路东段三元市场院内<br>
@@ -93,24 +93,24 @@
 
     <div class="n_news">
 
-        <li><p><a href="http://localhost/4/1" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
+        <li><p><a href="http://jbmjg.net/4/1" title="选择张拉膜车棚注意事项">选择张拉膜车棚注意事项</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/2" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
+        <li><p><a href="http://jbmjg.net/4/2" title="膜结构车棚结构形式浅析">膜结构车棚结构形式浅析</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/3" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
+        <li><p><a href="http://jbmjg.net/4/3" title="膜结构施工中膜的安装要点有哪些？">膜结构施工中膜的安装要点有哪些？</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/4" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
+        <li><p><a href="http://jbmjg.net/4/4" title="为什么膜结构建筑现在这么流行?">为什么膜结构建筑现在这么流行?</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/5" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
+        <li><p><a href="http://jbmjg.net/4/5" title="膜结构排水要注意的问题">膜结构排水要注意的问题</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/6" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/7" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
+        <li><p><a href="http://jbmjg.net/4/6" title="张拉整体结构">张拉整体结构</a></p><span>2017-04-11</span></li>
+        <li><p><a href="http://jbmjg.net/4/7" title="膜结构车棚和景观棚的区别">膜结构车棚和景观棚的区别</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/8" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
+        <li><p><a href="http://jbmjg.net/4/8" title="独家定制膜结构车棚">独家定制膜结构车棚</a></p><span>2017-04-11</span>
         </li>
-        <li><p><a href="http://localhost/4/9" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
+        <li><p><a href="http://jbmjg.net/4/9" title="膜结构车棚的四大注意点">膜结构车棚的四大注意点</a></p>
             <span>2017-04-11</span></li>
-        <li><p><a href="http://localhost/4/10" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
+        <li><p><a href="http://jbmjg.net/4/10" title="膜结构看台合格品验收流程">膜结构看台合格品验收流程</a></p>
             <span>2017-04-11</span></li>
 
 
