--- a/views/index.html
+++ b/views/index.html
@@ -117,28 +117,28 @@
     <div class="news_right mr60">
         <ul>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/25.html">选择张拉膜车棚注意事项</a></p>
+                <p><a href="http://jbmjg.net/4/1">选择张拉膜车棚注意事项</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/24.html">膜结构车棚结构形式浅析</a></p>
+                <p><a href="http://jbmjg.net/4/2">膜结构车棚结构形式浅析</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/23.html">膜结构施工中膜的安装要</a></p>
+                <p><a href="http://jbmjg.net/4/3">膜结构施工中膜的安装要</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/22.html">为什么膜结构建筑现在这</a></p>
+                <p><a href="http://jbmjg.net/4/4">为什么膜结构建筑现在这</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/21.html">膜结构排水要注意的问题</a></p>
+                <p><a href="http://jbmjg.net/4/5">膜结构排水要注意的问题</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/20.html">张拉整体结构</a></p>
+                <p><a href="http://jbmjg.net/4/6">张拉整体结构</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/19.html">膜结构车棚和景观棚的区</a></p>
+                <p><a href="http://jbmjg.net/4/7">膜结构车棚和景观棚的区</a></p>
                 <span>2017-04-11</span> </li>
             <li> <strong>[新闻动态]</strong>
-                <p><a href="http://jbmjg.net/4/20170411/18.html">独家定制膜结构车棚</a></p>
+                <p><a href="http://jbmjg.net/4/8">独家定制膜结构车棚</a></p>
                 <span>2017-04-11</span> </li>
 
         </ul>
