--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 </div>
 <div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台</div>
 
-<div class="main_tit"> <span>景博瑞膜结构，产品展示</span>
+<div class="main_tit"> <span>景博膜结构，产品展示</span>
     <p>先进的生产技术，节约您的生产成本！</p>
 </div>
 <div class="cpzs">
@@ -63,7 +63,7 @@
         <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS019250b13.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/0420_8.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
 
     </ul>
