--- a/views/2/5.html
+++ b/views/2/5.html
@@ -54,7 +54,7 @@
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台
+<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,景观膜结构,学校看台膜结构
 </div>
 
 
