--- a/views/index.html
+++ b/views/index.html
@@ -50,21 +50,21 @@
     </div>
     <!-- 代码 结束 -->
 </div>
-<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,学习膜结构看台</div>
+<div class="main_top" style="line-height:40px;"><a href="http://jbmjg.net/#" class="bold">关键词搜索：</a>污水处理厂膜结构,充电桩,景观膜结构,学校看台膜结构</div>
 
 <div class="main_tit"> <span>景博膜结构，产品展示</span>
     <p>先进的生产技术，节约您的生产成本！</p>
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192K1M0.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192G55X.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192649E7.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192620647.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192555509.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192532V3.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/20180507085046.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0192440D6.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_8.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_2.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_5.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_7.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_4.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_1.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_6.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_3.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">景观设施膜结构</a></span></li>
 
     </ul>
 </div>
@@ -88,10 +88,10 @@
 </div>
 <div class="cpzs">
     <ul>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115910407.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115TT47.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115R2551.gif" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
-        <li><a href="javascript:void(0)"><img src="/public/imgs/product/1-1FS0115P1944.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_38.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_40.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_44.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
+        <li><a href="javascript:void(0)"><img src="/public/imgs/product/new/0420_45.jpg" width="253" height="253"></a><span><a href="javascript:void(0)">学校看台膜结构案例</a></span></li>
 
     </ul>
 </div>
