--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
     <!-- 代码 开始 -->
     <div id="full-screen-slider">
         <ul id="slides">
-            <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;"><a href="http://localhost" target="_blank"></a></li>
+            <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;"><a href="http://jbmjg.net/" target="_blank"></a></li>
         </ul>
     </div>
     <!-- 代码 结束 -->
